# wtdbg2-MPI

./: .gitignore  CMakeLists.txt  Doxyfile  bit2vec.h  bitsvec.h  bitvec.h  build.sh  chararray.h  common.h  dagcns.h  dbgcns.h  dna.h  filereader.h  fuck.txt  hashset.h  hostfile  icc-cluser.sh  kbm.c  kbm.h  kbm_core.c  kbm_core.cpp  kbm_defines.h  kbm_map.c  kbm_map.h  kbm_opt.cpp  kbm_opt.h  kbm_opt.md  kbmpoa.h  ksw.c  ksw.cpp  kswx.h  list.h  mem_share.h  optimization_note.md  pgzf.cpp  pgzf.h  poacns.h  profiling.sh  queue.h  request_for_comment.c  (+14 more)
glog/: logging.h
include/: bit2vec.h  bitvec.h  chararray.h  common.h  dna.h  filewriter.h  hashset.h  list.h  mem_share.h  sort.h
ksw/: CMakeLists.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bit2vec.h  bitsvec.h  bitvec.h  chararray.h  cmake_install.cmake  common.h  corr-mode.md  debrain.h  dna.h  filereader.h  filewriter.h  hashset.h  kbm.cpp  kbm.h  kbm_core.cpp  kbm_defines.h  kbm_opt.cpp  kbm_opt.h  kbmpoa.h  ksw.cpp  ksw.h  list.h  mem_share.h  mmap.h  pgzf  queue.h  sort.h  thread.h  tmp.cpp  txtplot.h  wtdbg-cns  wtdbg.cpp  wtdbg.h  wtpoa-cns  wtpoa.h
src/zhwklibs/: flog.cc  flog.h  memtrace.cc  memtrace.h  pthread_wrapper.cc  pthread_wrapper.h
trash/: dbgcns.h  general_graph.h  kbm.cpp  wtdbg-cns.cpp
